objects/CM_Feature_Item__c.object
<CustomObject>
    <description>Hold all available features.</description>
    <fields>
        <fullName>ptt_Code__c</fullName>
        <description>Code in format XXXX_ZZZ</description>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Is_Multiorder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Multi order packages can be ordered more than one. Non multi order may be ordered only once.</inlineHelpText>
        <label>Is Multiorder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Key__c</fullName>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Package_Existing_Feature_ID__c</fullName>
        <description>For temporary storage in apex class, do no fill any data.</description>
        <inlineHelpText>For temporary storage in apex class, do no fill any data.</inlineHelpText>
        <label>Package Existing Feature ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Quantity__c</fullName>
        <description>For temporary storage in apex class, do no fill any data.</description>
        <inlineHelpText>For temporary storage in apex class, do no fill any data.</inlineHelpText>
        <label>Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calimaster</fullName>
                </value>
                <value>
                    <fullName>VIBGUARD Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Variant__c</fullName>
        <label>Variant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>ptt_System__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Server</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PT - CM Feature Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ptt_System__c</columns>
        <columns>ptt_Variant__c</columns>
        <columns>ptt_Key__c</columns>
        <columns>ptt_Code__c</columns>
        <columns>NAME</columns>
        <columns>ptt_Is_Multiorder__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Calimaster</fullName>
        <columns>NAME</columns>
        <columns>ptt_Key__c</columns>
        <columns>ptt_Variant__c</columns>
        <columns>ptt_Code__c</columns>
        <columns>ptt_Is_Multiorder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_System__c</field>
            <operation>equals</operation>
            <value>Calimaster</value>
        </filters>
        <label>Calimaster Features</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vibguard_Features</fullName>
        <columns>NAME</columns>
        <columns>ptt_Key__c</columns>
        <columns>ptt_Variant__c</columns>
        <columns>ptt_Code__c</columns>
        <columns>ptt_Is_Multiorder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ptt_System__c</field>
            <operation>equals</operation>
            <value>VIBGUARD Viewer</value>
        </filters>
        <label>Vibguard Features</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Feature Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Feature Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>